--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               </ul>
              </nav>
             <ul class="contact-list list">
-            <li>
-                <a class="contact-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="mail">
+                <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
                 <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -134,13 +134,13 @@
         <a class="logo link" href="" lang="en">Web<span class="studio-footer">Studio</span></a>
         <address class="address">
         <ul class="footer-list list">
-            <li> 
+            <li class="footer-list-item"> 
                 <a class="address-link link" href="https://goo.gl/maps/Q8naEn8hM8jCAFG47" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
+            <li class="footer-list-item">
                 <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="footer-list-item">
                 <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
