--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
             </ul>
         </nav>
         <ul class="contact-list list">
-            <li>
-                <a class="contact-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="mail">
+                <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
                 <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -50,11 +50,11 @@
            <div class="container">
             <h2 hidden>Кнопки</h2>
          <ul class="buttons-list list">
-            <li><button class="portfolio-btn" type="button">Все</button></li>
-            <li><button class="portfolio-btn" type="button">Веб-сайты</button></li>
-            <li><button class="portfolio-btn" type="button">Приложения</button></li>
-            <li><button class="portfolio-btn" type="button">Дизайн</button></li>
-            <li><button class="portfolio-btn" type="button">Маркетинг</button></li>
+            <li class="portfolio-button-item"><button class="portfolio-btn" type="button">Все</button></li>
+            <li class="portfolio-button-item"><button class="portfolio-btn" type="button">Веб-сайты</button></li>
+            <li class="portfolio-button-item"><button class="portfolio-btn" type="button">Приложения</button></li>
+            <li class="portfolio-button-item"><button class="portfolio-btn" type="button">Дизайн</button></li>
+            <li class="portfolio-button-item"><button class="portfolio-btn" type="button">Маркетинг</button></li>
         </ul>
            
 
@@ -151,14 +151,14 @@
         <a class="logo link" href="" lang="en">Web<span class="studio-footer">Studio</span></a>
         <address class="address">
             <ul class="footer-list list">
-                <li>
+                <li class="footer-list-item">
                     <a class="address-link link" href="https://goo.gl/maps/Q8naEn8hM8jCAFG47" target="_blank"
                         rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li>
+                <li class="footer-list-item">
                     <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="footer-list-item">
                     <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
